# yolo26-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile
.github/workflows/: ci.yml  release.yml
assets/: expected_outputs.json
assets/model/: vocabulary.json
assets/model/dynamic-onnx/debug_data/: cat_meta.json  cinnamon_meta.json  food_meta.json  fridge_meta.json  plant_meta.json  sup_meta.json  van_meta.json
benches/: predict_benchmark.rs
examples/: basic_use.rs  export_outputs.rs  promptable_basic.rs  promptable_visualize.rs  visualize.rs  visualize_2.rs
py-yolo/: TODO.md  export_onnx.py  run_onnx.py  visualize_yolo.py
py-yolo/pf/: onnx_tags.py  reference_tags.py  reference_visual.py
py-yolo/text_prompt/: diag1_export_reference.py  diag2_compare_onnx.py  diag3_compare_outputs.py  diag4_onnx_candidates.py  diag5_reference_candidates.py  diag6_nms_sweep.py  export_prompt_onnx_with_clip.py  export_text_prompt_onnx.py  onnx_basic.py  onnx_visual.py  onnx_visual_clip.py  reference_basic.py  reference_visual.py  run_onnx.py  run_text_prompt.py
src/: error.rs  lib.rs  main.rs  model_manager.rs
src/predictor/: custom_resize.rs  mod.rs  nms.rs  object_detector.rs  processing.rs  promptable.rs  yolo_predictor.rs
tests/: regression.rs
