[package]
name = "object_detector"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17.2"
image = "0.25.10"
serde_json = "1.0"
num_cpus = "1.17.0"
color-eyre = "0.6.5"

[features]
default = ['load-dynamic']
download-binaries = ["ort/download-binaries"]
copy-dylibs = ["ort/copy-dylibs"]
load-dynamic = ["ort/load-dynamic"]
# ort execution providers
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
nvrtx = ["ort/nvrtx"]
xnnpack = ["ort/xnnpack"]
webgpu = ["ort/webgpu"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
migraphx = ["ort/migraphx"]
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]
qnn = ["ort/qnn"]
cann = ["ort/cann"]
nnapi = ["ort/nnapi"]
tvm = ["ort/tvm"]
acl = ["ort/acl"]
armnn = ["ort/armnn"]
vitis = ["ort/vitis"]
rknpu = ["ort/rknpu"]
azure = ["ort/azure"]
