[package]
name = "object_detector"
description = "Object detection using ORT and the yoloe-26-seg model. This model can detect multiple objects per image, each having a tag, pixel-level mask, and a boundingbox. It's pretrained, it has a vocabulary of 4000+ objects. "
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0"
homepage = "https://github.com/RuurdBijlsma/object_detector-rs"
repository = "https://github.com/RuurdBijlsma/object_detector-rs"
documentation = "https://docs.rs/object_detector"
exclude = ["assets", ".github", "TODO.md", "justfile"]

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17.2"
image = "0.25.10"
serde_json = "1.0"
num_cpus = "1.17.0"
color-eyre = "0.6.5"
rayon = "1.11.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
imageproc = "0.26.1"
ab_glyph = "0.2"

[features]
default = ['load-dynamic']
download-binaries = ["ort/download-binaries"]
copy-dylibs = ["ort/copy-dylibs"]
load-dynamic = ["ort/load-dynamic"]
# ort execution providers
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
nvrtx = ["ort/nvrtx"]
xnnpack = ["ort/xnnpack"]
webgpu = ["ort/webgpu"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
migraphx = ["ort/migraphx"]
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]
qnn = ["ort/qnn"]
cann = ["ort/cann"]
nnapi = ["ort/nnapi"]
tvm = ["ort/tvm"]
acl = ["ort/acl"]
armnn = ["ort/armnn"]
vitis = ["ort/vitis"]
rknpu = ["ort/rknpu"]
azure = ["ort/azure"]

[[bench]]
name = "predict_benchmark"
harness = false
